EX-870: Fix white space when menu is open

--- a/src/app/content-blocks/header/header.component.scss
+++ b/src/app/content-blocks/header/header.component.scss
@@ -158,7 +158,7 @@ header {
     height: 40px;
   }
   .navigation {
-    top: 76px;
+    top: 75px;
   }
 }
 
